# pymathics-graph

./: .editorconfig  .gitignore  .isort.cfg  .pre-commit-config.yaml  ChangeLog-spell-corrected.diff  MANIFEST.in  Makefile  NEWS.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: consistency-checks.yml  ubuntu.yml
admin-tools/: check-versions.sh  make-dist.sh  pyenv-versions
pymathics/graph/: __init__.py  __main__.py  algorithms.py  base.py  boxes.py  centralities.py  collections.py  components.py  curated.py  format.py  generators.py  graph_generators.py  graphsymbols.py  harary.py  measures_and_metrics.py  operations.py  parametric.py  properties.py  random.py  structured.py  tree.py  version.py
pymathics/graph/eval/: harary.py  parametric.py  tree.py
pymathics/graph/measures_and_metrics/: __init__.py  basic.py  degree.py
screenshots/: console.md
test/: helper.py  test_algorithms.py  test_base.py  test_components.py  test_fixme.py  test_generators.py  test_measures_and_metrics.py  test_parametric.py  test_properties.py  test_tree.py
test/consistency-and-style/: test_summary_text.py
