[build-system]
requires = [
	"setuptools", # CVE-2024-38335 recommends this
        "Mathics3>=9.0.0",
        "networkx>=3.0.0",
        "matplotlib",
        "Mathics3-Module-Base",
]
build-backend = "setuptools.build_meta"

[project]
name = "Mathics3-graph"
description = "Mathics3 Graph Module using NetworkX"
dependencies = [
        "Mathics3>=9.0.0",
        "Mathics3-Module-Base",
        "mpmath>=1.2.0",
        "networkx>=3.0.0",
        "pydot",
        "matplotlib",
        "scipy>=1.10.0",
]
requires-python = ">=3.10"
readme = "README.rst"
license = "GPL-3.0-or-later"
keywords = ["Mathematica", "Wolfram", "Interpreter", "Shell", "Math", "CAS"]
maintainers = [
    {name = "Mathics Group", email = "mathics-devel@googlegroups.com"},
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Interpreters",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/Mathics3/pymathics-graph"
Downloads = "https://github.com/Mathics3/pymathics-graph/releases"

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools]
packages = [
    "pymathics.graph",
]

[tool.setuptools.dynamic]
version = {attr = "pymathics.graph.__version__"}
